--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@parcel/transformer-sass": "^2.3.1",
     "parcel": "^2.3.1",
     "sass": "^1.49.8"
+  },
+  "dependencies": {
+    "open-props": "^1.3.3"
   }
 }
